# nvdtop

./: LICENSE  README.md  pyproject.toml
src/nvdtop/: cli.py  containers.py  display.py  gpu.py  system.py
